apps/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: home-assistant
        image: ghcr.io/home-assistant/home-assistant
        securityContext:
          privileged: true
        ports:
        - name: web
          containerPort: 8123
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: config-configmap 
          mountPath: /config/configuration.yaml
          subPath: configuration.yaml
        - name: config-configmap 
          mountPath: /config/automations.yaml
          subPath: automations.yaml
      volumes:
      - name: config-pvc
        persistentVolumeClaim:
          claimName: home-manager-config
      - name: config-configmap
        configMap:
          name: home-manager
