apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  type: LoadBalancer
  ports:
  - name: web
    protocol: TCP
    port: 8123
    targetPort: 8123
