apps/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
spec:
  tls:
  - hosts:
    - home-assistant.home.southcity.dev
    secretName: home-assistant-tls
  rules:
  - host: home-assistant.home.southcity.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant
            port:
              name: web
